only slider left

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,11 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="./images/NAMU.png"
+      href="./images/NA MU.svg"
     >
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script
       type="text/javascript"
       src="scripts/main.js"
@@ -25,7 +27,6 @@
       <div class="container">
         <div class="grid">
           <a href="#menu" class="icon icon--menu grid__item--1-1">
-            <div class="icon--menu-img"></div>
           </a>
 
           <div
@@ -38,7 +39,7 @@
             <a href="#" class="logo__link">
               <img
                 class="logo__image"
-                src="./images/NAMU.png"
+                src="./images/NA MU.svg"
                 alt="NAMU"
               >
             </a>
@@ -58,9 +59,9 @@
           <div class="header__actions grid__item--desktop-1-2">
             <div class="header__actions--line"></div>
 
-            <div class="header__actions--actions">
+            <a href="#currentEvents" class="header__actions--actions">
               ПОДІЇ
-            </div>
+            </a>
           </div>
           <div
             class="
@@ -169,7 +170,7 @@
           class="menu__call menu__call--address"
           target="_blank"
         >
-        вул. М. Грушевського, 6; Київ, 01001
+         Київ, 01001,<br>вул. М. Грушевського, 6
         </a>
       </div>
     </nav>
@@ -268,7 +269,7 @@
                 currentEvents__photo--3
               "
               src="./images/AS3.jpg"
-              alt="AS1"
+              alt="AS3"
             >
 
 
@@ -410,7 +411,7 @@
             <a href="#">
               <img
                 class="footer__logoSocials--logo"
-                src="./images/NAMU.png"
+                src="./images/NA MU.svg"
                 alt="logo"
               >
             </a>
@@ -419,7 +420,7 @@
               <a href="https://www.facebook.com/" target="_blank">
                 <img
                   class="footer__logoSocials--socials-facebook"
-                  src="./images/Facebook.png"
+                  src="./images/Facebook.svg"
                   alt="Facebook"
                 >
               </a>
@@ -427,7 +428,7 @@
               <a href="https://www.instagram.com/" target="_blank">
                 <img
                   class="footer__logoSocials--socials-instagram"
-                  src="./images/instagram.png"
+                  src="./images/instagram.svg"
                   alt="instagram"
                 >
               </a>
@@ -548,8 +549,7 @@
               grid__item--desktop-1-12
             "
           >
-            <p class="footer__contacts--bottom-1">Designed by Zhyriada Marina</p>
-            <p class="footer__contacts--bottom-2">Copyright © 2019. All Rights Reserved.</p>
+            <p class="footer__contacts--bottom-2">Copyright © 2022. All Rights Reserved.</p>
           </div>
         </div>
       </div>
