--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
           <form action="#events" class="grid__item--tablet-1-3 grid__item--desktop-3-5">
             <button class="button header__button">Квитки</button>
           </form>
-          <a href="#" class="header__info-events grid__item--desktop-1-1">Події</a>
+          <a href="events" class="header__info-events grid__item--desktop-1-1">Події</a>
         </div>
       </div>
     </header>
