JS code was added

--- a/src/index.html
+++ b/src/index.html
@@ -172,42 +172,44 @@
           Галерея
         </h1>
 
-        <div class="gallery__images">
-          <img
-            src="images/picture2_1.png"
-            alt="Woman in Ukrainian dress"
-            class="gallery__image gallery__image--high-left"
-          >
+        <div class="gallery__container">
+          <div class="gallery__images">
+            <img
+              src="images/picture2_1.png"
+              alt="Woman in Ukrainian dress"
+              class="gallery__image gallery__image--high-left"
+            >
+    
+            <img
+              src="images/picture2_2.png"
+              alt="Winter landscape"
+              class="gallery__image gallery__image--high-right"
+            >
+    
+            <img
+              src="images/picture2_3.png"
+              alt="In the park"
+              class="gallery__image gallery__image--low-left"
+            >
+            <img
+              src="images/picture2_4.png"
+              alt="The seashore"
+              class="gallery__image gallery__image--low-right"
+            >
+          </div>
   
-          <img
-            src="images/picture2_2.png"
-            alt="Winter landscape"
-            class="gallery__image gallery__image--high-right"
-          >
+          <div class="gallery__dots">
+            <div class="gallery__dot gallery__dot--1 gallery__dot--isactive">
+            </div>
   
-          <img
-            src="images/picture2_3.png"
-            alt="In the park"
-            class="gallery__image gallery__image--low-left"
-          >
-          <img
-            src="images/picture2_4.png"
-            alt="The seashore"
-            class="gallery__image gallery__image--low-right"
-          >
-        </div>
-
-        <div class="gallery__dots">
-          <div class="gallery__dot">
-          </div>
-
-          <div class="gallery__dot">
-          </div>
-
-          <div class="gallery__dot">
-          </div>
-
-          <div class="gallery__dot">
+            <div class="gallery__dot gallery__dot--2">
+            </div>
+  
+            <div class="gallery__dot gallery__dot--3">
+            </div>
+  
+            <div class="gallery__dot gallery__dot--4">
+            </div>
           </div>
         </div>
       </section>
@@ -237,7 +239,7 @@
 
           <label for="for-linter"></label>
 
-          <button type="reset" class="subscription__button">
+          <button type="submit" class="subscription__button">
             <img
               src="images/arrow-black.png"
               alt="arrow"
@@ -352,4 +354,6 @@
       </div>
     </footer>
   </body>
+  <script type="text/javascript" src="scripts/main.js"></script>
+  <script type="text/javascript" src="scripts/slider.js"></script>
 </html>
