--- a/src/index.html
+++ b/src/index.html
@@ -354,6 +354,15 @@
       </div>
     </footer>
   </body>
-  <script type="text/javascript" src="scripts/main.js"></script>
-  <script type="text/javascript" src="scripts/slider.js"></script>
+  <script
+    type="text/javascript"
+    src="scripts/main.js"
+  >
+  </script>
+  <script
+    type="text/javascript"
+    src="scripts/slider.js"
+    defer
+  >
+  </script>
 </html>
