Transition was added for gallery images, links in contacts were created

--- a/src/index.html
+++ b/src/index.html
@@ -309,13 +309,31 @@
         </div>
 
         <div class="footer__contacts-content">
-          вул. М. Грушевського, 6; Київ, 01001
-          <br>
-          тел. +38 (044) 278-13-57
-          <br>
-          факс +38 (044) 278-74-54
-          <br>
-          e-mail: info@namu.kiev.ua
+          <a
+            href="https://goo.gl/maps/TpSEc6Ndmnm6kPgT6"
+            target="_blank"
+            class="footer__contacts-link"
+          >
+            вул. М. Грушевського, 6; Київ, 01001
+          </a>
+          <a
+            class="footer__contacts-link"
+            href="tel:+38 (044) 278-13-57"
+          >
+            тел. +38 (044) 278-13-57
+          </a>
+          <a
+            class="footer__contacts-link"
+            href="tel:+38 (044) 278-74-54"
+          >
+            факс +38 (044) 278-74-54
+          </a>
+          <a
+            href="mailto:info@namu.kiev.ua"
+            class="footer__contacts-link"
+            >
+            e-mail: info@namu.kiev.ua
+          </a>
         </div>
       </div>
 
