--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAMU</title>
     <link
-      rel="icon" 
+      rel="icon"
       href="images/favicon.jpg"
       type="image/x-icon"
     >
@@ -15,7 +15,7 @@
     <header class="header">
       <div class="wrapper">
         <div class="header__nav">
-          <a href="#" class="header__nav-icon icon icon--menu"></a>
+          <a href="#menu" class="header__nav-icon icon icon--menu"></a>
           <a href="#" class="icon icon--logo icon--logo--header"></a>
         </div>
         <img
@@ -32,6 +32,17 @@
         </div>
       </div>
     </header>
+
+    <div class="page__menu menu" id="menu" >
+      <nav class="menu__nav">
+        <a href="#" class="menu__nav-icon icon icon--cross"></a>
+        <a href="#events" class="menu__nav-link">Актуальні події</a>
+        <a href="#gallery" class="menu__nav-link">Галерея</a>
+        <a href="#subscribe" class="menu__nav-link">Підписка</a>
+        <a href="#footer" class="menu__nav-link">Про нас</a>
+      </nav>
+    </div>
+
     <div class="wrapper">
       <section class="events" id="events">
         <h2 class="events__title">Актуальні події</h2>
@@ -73,7 +84,7 @@
     <section class="lection">
       <img
         src="images/art/art3.png"
-        alt="art" 
+        alt="art"
         class="lection__image"
       >
       <div class="wrapper wrapper--lection">
@@ -142,7 +153,7 @@
         </div>
       </div>
     </section>
-    <section class="subscribe">
+    <section class="subscribe" id="subscribe">
       <div class="wrapper">
         <div class="subscribe__info">
           <h2 class="subscribe__info-title">Підписка</h2>
@@ -161,7 +172,7 @@
         </form>
       </div>
     </section>
-    <footer class="footer">
+    <footer class="footer" id="footer">
       <div class="wrapper grid grid--tablet grid--desktop">
         <div class="footer__nav grid__item--tablet-1-1">
           <a href="#" class="icon icon--logo icon--logo--footer"></a>
