--- a/src/index.html
+++ b/src/index.html
@@ -357,12 +357,12 @@
             </a>
             <div class="details-namu__social-platform">
               <a
-                href="#"
+                href="https://www.facebook.com/namu.museum/"
                 class="icon
                 icon--facebook"
               ></a>
               <a
-                href="#"
+                href="https://www.instagram.com/namu.museum/"
                 class="icon
                 icon--instagram"
               ></a>
@@ -502,6 +502,6 @@
         </div>
       </div>
     </footer>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <script type="text/javascript" src="./scripts/main.js"></script>
   </body>
 </html>
