--- a/src/index.html
+++ b/src/index.html
@@ -360,11 +360,13 @@
                 href="https://www.facebook.com/namu.museum/"
                 class="icon
                 icon--facebook"
+                target="_blank"
               ></a>
               <a
                 href="https://www.instagram.com/namu.museum/"
                 class="icon
                 icon--instagram"
+                target="_blank"
               ></a>
             </div>
           </div>
