--- a/src/index.html
+++ b/src/index.html
@@ -366,7 +366,7 @@
                 href="https://www.instagram.com/namu.museum/"
                 class="icon
                 icon--instagram"
-                target="_blank"
+                target="_parent"
               ></a>
             </div>
           </div>
