--- a/src/index.html
+++ b/src/index.html
@@ -292,7 +292,7 @@
             подій та останніх новин.
           </div>
 
-          <form action="/" method="get">
+          <form action="#" method="get">
             <div class="form">
               <input 
                 name="email" 
