--- a/src/index.html
+++ b/src/index.html
@@ -166,8 +166,8 @@
         </div>
       </section>
 
-      <section class="page__section">
-        <div class="lecture"></div>
+      <section class="basic">
+        <div class="basic__image"></div>
         <div class="text">
           <div class="holder">
             <div class="holder__title">ЛЕКЦІЯ</div>
