--- a/src/index.html
+++ b/src/index.html
@@ -38,11 +38,13 @@
                 ПОДІЇ
               </a>
 
-              <a href="#current-events" class="content__tickets">
-                КВИТКИ
-              </a>
-      
-              <a href="#current-events" class="content__arrow"></a>
+              <div class="content__hover">
+                <a href="#current-events" class="content__tickets">
+                  КВИТКИ
+                </a>
+        
+                <a href="#current-events" class="content__arrow"></a>
+              </div>
 
               <div class="content__line"></div>
             </div>
@@ -321,14 +323,18 @@
               >
             </a>
 
-            <a href="https://www.facebook.com/namu.museum/" class="footer__link">
+            <a 
+              href="https://www.facebook.com/namu.museum/" 
+              class="footer__link" 
+              target="_blank"
+            >
               <img 
                 src="images/facebook.png" 
                 alt="facebook"
               >
             </a>
 
-            <a href="https://www.instagram.com/namu.museum/">
+            <a href="https://www.instagram.com/namu.museum/" target="_blank">
               <img 
                 src="images/instagram.png" 
                 alt="footer__instagram"
