--- a/src/index.html
+++ b/src/index.html
@@ -42,11 +42,11 @@
             </div>
           </div>
         </div>
-        <div class="header__subtitle">
+        <a href="#news" class="header__subtitle">
           <span>
             ПОДІЇ
           </span>
-        </div>
+        </a>
       </div>
       <div class="header__picture">
       </div>
@@ -154,7 +154,7 @@
           class="lecture__img"
         >
         <div class="lecture__discription">
-          <div class="lecture__undertitle news__undertitle">
+          <div class=" news__undertitle lecture__undertitle">
             <div class="lecture__undertitle-text news__undertitle-text">
               ЛЕКЦІЯ
             </div>
@@ -166,7 +166,6 @@
             Від класицизму до романтизму
           </h3>
         </div>
-
       </section>
 
       <section class="page__section galery" id="galery">
@@ -264,9 +263,17 @@
                 >
               </a>
               <div class="footer__social-card">
-                <a href="https://www.facebook.com/" class="footer__social footer__social--fb">
+                <a
+                  href="https://www.facebook.com/"
+                  class="footer__social footer__social--fb"
+                  target="_blank"
+                >
                 </a>
-                <a href="https://www.instagram.com" class="footer__social footer__social--inst">
+                <a
+                  href="https://www.instagram.com"
+                  class="footer__social footer__social--inst"
+                  target="_blank"
+                >
                 </a>
               </div>
             </div>
@@ -290,16 +297,16 @@
             <h6 class="footer__titie" id="contacts">
               Контакти:
             </h6>
-            <a href="https://goo.gl/maps/c7G7QvXDs8dwTAmAA" class="footer__text">
+            <a href="https://goo.gl/maps/c7G7QvXDs8dwTAmAA" class="footer__text footer__text--button">
               вул. М. Грушевського, 6; Київ, 01001
             </a>
-            <a href="tel:+38 (044) 278-13-57" class="footer__text">
+            <a href="tel:+38 (044) 278-13-57" class="footer__text footer__text--button">
               тел. +38 (044) 278-13-57
             </a>
-            <a href="tel:+38 (044) 278-74-54" class="footer__text">
+            <a href="tel:+38 (044) 278-74-54" class="footer__text footer__text--button">
               факс +38 (044) 278-74-54
             </a>
-            <a href="mailto:info@namu.kiev.ua" class="footer__text">
+            <a href="mailto:info@namu.kiev.ua" class="footer__text footer__text--button">
               e-mail: info@namu.kiev.ua
             </a>
           </div>
