--- a/src/index.html
+++ b/src/index.html
@@ -297,7 +297,11 @@
             <h6 class="footer__titie" id="contacts">
               Контакти:
             </h6>
-            <a href="https://goo.gl/maps/c7G7QvXDs8dwTAmAA" class="footer__text footer__text--button">
+            <a
+              href="https://goo.gl/maps/c7G7QvXDs8dwTAmAA"
+              class="footer__text footer__text--button"
+              target="_blank"
+            >
               вул. М. Грушевського, 6; Київ, 01001
             </a>
             <a href="tel:+38 (044) 278-13-57" class="footer__text footer__text--button">
