--- a/src/index.html
+++ b/src/index.html
@@ -128,14 +128,16 @@
         <div class="lecture">
           <div class="lecture__background"></div>
 
-          <div class="lecture__textbox">
-            <div class="lecture__announcement">
-              <p class="lecture__name">ЛЕКЦІЯ</p>
+          <div class="container">
+            <div class="lecture__textbox">
+              <div class="lecture__announcement">
+                <p class="lecture__name">ЛЕКЦІЯ</p>
 
-              <p class="lecture__date">26/08/2019 - 11:00</p>
+                <p class="lecture__date">26/08/2019 - 11:00</p>
+              </div>
+
+              <h2 class="lecture__title">Від класицизму до <br> романтизму</h2>
             </div>
-
-            <h2 class="lecture__title">Від класицизму до <br> романтизму</h2>
           </div>
         </div>
       </div>
@@ -220,7 +222,7 @@
             Бути в курсі всіх актуальних подій та останніх новин.
           </p>
 
-          <form action="#" class="subscription__form">
+          <form class="subscription__form">
             <input
               type="email"
               name="email"
