--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,299 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link 
+      rel="icon" 
+      type="image/x-icon" 
+      href="./images/NAMU.svg"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
     <script type="text/javascript" src="scripts/main.js"></script>
+    <header class="header">
+      <a href="#menu" class="header__menu-icon">
+        <img src="./images/menu.svg" alt="menu">
+      </a>
+      <a href="#" class="header__logo">
+        <img src="./images/NAMU.svg" alt="logo">
+      </a>
+      <img 
+        src="./images/namuphoto.png" 
+        alt="namuPhoto"
+        class="header__photo">
+      <h1 class="header__title">
+        ХУДОЖНІЙ <br> МУЗЕЙ
+      </h1>
+      <div class="header__container">
+        <a href="#" class="header__container-input">
+          КВИТКИ
+        </a>
+        <!-- <form action="" method="post" >
+          <input 
+          name="email" 
+          type="email"
+          placeholder="КВИТКИ"
+          class="header__container-input"
+          required
+          >
+        </form> -->
+        <a href="#" class="header__container-greenbutton"></a>
+      </div>
+      <a href="#actual" class="header__link">ПОДІЇ</a>
+    </header>
+
+    <div class="menu" id="menu">
+      <div class="menu__actions">
+        <a href="#">
+          <img 
+            src="./images/NAMU.svg" 
+            alt="Logo"
+            class="menu__logo"
+          >
+        </a>
+      </div>
+      <div class="menu__nav">
+        <a href="#gallery" class="menu__nav__link">Галерея</a>
+        <a href="#actual" class="menu__nav__link">Виставки та події</a>
+        <a href="#suscribe" class="menu__nav__link">Про Нас</a>
+        <a href="#contacts" class="menu__nav__link">Контакти</a>  
+      </div>
+    </div>
+
+
+
+    <main>
+      <section class="actual" id="actual">
+        <h2 class="actual__title">
+          Актуальні події
+        </h2>
+        <img 
+          src="./images/Rectangle.png" 
+          alt="picture"
+          class="actual__image"
+        >
+        <div class="actual__card">
+          <h4 class="actual__card--name">
+            ВИСТАВКА
+          </h4>
+          <p class="actual__card--date">
+            26.08-29.11.2019
+          </p>
+          <p class="actual__card--title">
+            Йду і повертаюсь 
+          </p>
+          <img 
+            src="./images/red.png" 
+            alt="redsquare"
+            class="actual__card--redsquare"
+          >
+          <p class="actual__card--text">
+            Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980 - 1995 років.
+          </p>
+        </div>
+        <img 
+          src="./images/Rectangle2.png" 
+          alt="picture"
+          class="actual__image"
+        >
+        <div class="actual__card">
+          <h4 class="actual__card--name">
+            ВИСТАВКА
+          </h4>
+          <p class="actual__card--date">
+            26.08-29.11.2019
+          </p>
+          <p class="actual__card--title">
+            І спогади і мрії 
+          </p>
+          <img 
+            src="./images/red.png" 
+            alt="redsquare"
+            class="actual__card--redsquare"
+          >
+          <p class="actual__card--text">
+            Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+          </p>
+        </div>
+      </section>
+      <section class="classic">
+        <img 
+          src="./images/RectangleClassic.png" 
+          alt="ClassicPhoto"
+          class="classic__image"
+        >
+        <div class="classic__card">
+          <h4 class="classic__card--name">
+            ЛЕКЦІЯ
+          </h4>
+          <p class="classic__card--date">
+            26/08/2019 - 11:00
+          </p>
+          <p class="classic__card--title">
+            Від класицизму до романтизму 
+          </p>
+        </div>
+      </section>
+      <section class="gallery" id="gallery">
+        <h2 class="gallery__title">
+          Галерея
+        </h2>
+        <div class="gallery__container">
+          <img 
+          src="./images/gallery1.png" 
+          alt="ucrwoman"
+          class="gallery__container-image1"
+        >
+          <img
+            src="./images/goose.png" 
+            alt="ucrwoman"
+            class="gallery__container-image2"
+          >
+          <img 
+            src="./images/gallery2.png" 
+            alt="ucrwoman"
+            class="gallery__container-image3"
+          >
+          <img 
+            src="./images/gallery3.png" 
+            alt="ucrwoman"
+            class="gallery__container-image4"
+          >
+          <img 
+            src="./images/gallery4.png" 
+            alt="ucrwoman"
+            class="gallery__container-image5"
+          >
+        </div>
+        <img 
+          src="./images/dots.svg" 
+          alt="dots"
+          class="gallery__dots"
+        >
+      </section>
+      <section class="subscribe" id="suscribe">
+        <h2 class="subscribe__title">
+          Підписка
+        </h2>
+        <p class="subscribe__text">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+        <form class="subscribe__container">
+          <input 
+          name="email" 
+          type="email"
+          placeholder="E-mail"
+          class="subscribe__container-input"
+          required
+          >
+          <button class="subscribe__container-redbutton"></button>
+        </form>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer__links">
+        <a href="#">
+          <img 
+            src="./images/NAMU.svg" 
+            alt="logo" 
+            class="footer__logo"
+          >
+        </a>
+        <div class="footer__links-socials">
+          <a 
+            href="https://www.facebook.com" 
+            class="footer__links-socials--facebook"
+            target="_blank"
+          >
+          </a>
+          <a 
+            href="https://www.instagram.com" 
+            class="footer__links-socials--instagram"
+            target="_blank">
+          </a>
+        </div>
+      </div>
+      <div class="footer__contacts" id="contacts">
+        <div class="footer__contacts-schedule">
+          <p>
+            Графік роботи
+          </p>
+          <p>
+            <span class="footer__contacts-schedule-bold">12:00 — 20:00</span> середа
+          </p>
+          <p>
+            <span class="footer__contacts-schedule-bold">12:00 — 20:00</span> четвер
+          </p>
+          <p>
+            <span class="footer__contacts-schedule-bold">12:00 — 20:00</span> п’ятниця
+          </p>
+          <p>
+            <span class="footer__contacts-schedule-bold">11:00 — 19:00</span> субота 
+          </p>
+          <p>
+            <span class="footer__contacts-schedule-bold">11:00 — 19:00</span> неділя 
+          </p>
+          <p>
+            Вихідні понеділок, вівторок
+          </p>
+          <p>
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </p>
+        </div>
+        <div class="footer__contacts-address">
+          <p>
+            Контакти:
+          </p>
+          <p>
+            вул. М. Грушевського, 6; Київ, 01001
+          </p>
+          <p>
+            тел. +38 (044) 278-13-57
+          </p>
+          <p>
+            факс +38 (044) 278-74-54
+          </p>
+          <p>
+            e-mail: info@namu.kiev.ua
+          </p>
+        </div>
+      </div>
+      <a href="#" class="footer__up">
+        <img src="./images/up.svg" alt="arrowup" >
+      </a>
+      <div class="footer__division">
+      </div>
+      <div class="footer__nav">
+        <a href="#gallery" class="footer__nav-links">
+          Галерея
+        </a>
+        <a href="#suscribe" class="footer__nav-links">
+          Про Нас
+        </a>
+        <a href="#actual" class="footer__nav-links">
+          Виставки та події
+        </a>
+        <a href="#contacts" class="footer__nav-links">
+          Контакти
+        </a>
+      </div>
+      <div class="footer__rights">
+        <p>
+          Designed by Zhyriada Marina
+        </p>
+        <p>
+          Copyright © 2019. All Rights Reserved.
+        </p>
+      </div>
+    
+    </footer>
   </body>
 </html>
