--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,377 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum | Національний художній музей України</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/images/na-mu-logo.svg"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="container">
+        <div class="grid header__grid">
+          <div class="
+            grid__item
+            grid__item--on768-4-6
+            grid__item--on1280-6-12
+            header__bg-grid
+          ">
+            <div class="header__bg"></div>
+          </div>
+          <div class="
+            grid__item
+            grid__item--on320-1-1
+            grid__item--on768-1-1
+          ">
+            <a class="header__menu-opener" href="#"></a>
+          </div>
+          <div class="
+            grid__item
+            grid__item--on768-4-5
+            grid__item--on1280-6-7
+            header__logo-wrapper
+          ">
+            <a class="logo header__logo" href="/">
+              <img
+                class="logo__img logo__img--header"
+                src="images/na-mu-logo.svg"
+                alt="Museum logo"
+              >
+            </a>
+          </div>
+          <div class="
+            grid__item
+            grid__item--on320-1-2
+            grid__item--on768-1-3
+            grid__item--on1280-1-5
+          ">
+            <div class="header__info-wrapper">
+              <h1 class="header__title">Художній музей</h1>
+              <a class="header__button header__button--on1280" href="#events">
+                <div class="header__button-text">Квитки</div>
+                <div class="header__button-arrow"></div>
+              </a>
+              <a class="header__events" href="#events">Події</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main>
+      <section class="page__section-current-events" id="events">
+        <div class="container">
+          <h2 class="page__section-current-events-title">Актуальні події</h2>
+          <div class="page__section-current-events-excerpt">
+            <div class="grid">
+              <div class="
+                grid__item
+                grid__item--on320-1-2
+                grid__item--on768-1-6
+                grid__item--on1280-1-7
+              ">
+                <img
+                  class="page__section-current-events-excerpt-img"
+                  src="images/current-events/current-events-01.jpg"
+                  alt="landscape art"
+                >
+              </div>
+              <div class="
+                  grid__item
+                  grid__item--on320-1-2
+                  grid__item--on768-1-4
+                  grid__item--on1280-9-12
+                  page__section-current-events-excerpt-wrapper-grid
+                ">
+                <div class="page__section-current-events-excerpt-wrapper">
+                  <div class="page__section-current-events-excerpt-meta">
+                    <div class="page__section-current-events-excerpt-category">Виставка</div>
+                    <div class="page__section-current-events-excerpt-date">26.08-29.11.2019</div>
+                  </div>
+                  <div class="page__section-current-events-excerpt-title">Йду і повертаюсь
+                  </div>
+                  <div class="page__section-current-events-excerpt-text">
+                    Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="page__section-current-events-excerpt">
+            <div class="grid">
+              <div class="
+                grid__item
+                grid__item--on320-1-2
+                grid__item--on768-1-6
+                grid__item--on1280-1-7
+              ">
+                <img
+                  class="page__section-current-events-excerpt-img"
+                  src="images/current-events/current-events-02.jpg"
+                  alt="landscape art"
+                >
+              </div>
+              <div class="
+                  grid__item
+                  grid__item--on320-1-2
+                  grid__item--on768-1-4
+                  grid__item--on1280-9-12
+                  page__section-current-events-excerpt-wrapper-grid
+                ">
+                <div class="page__section-current-events-excerpt-wrapper">
+                  <div class="page__section-current-events-excerpt-meta">
+                    <div class="page__section-current-events-excerpt-category">Виставка</div>
+                    <div class="page__section-current-events-excerpt-date">26.08-29.11.2019</div>
+                  </div>
+                  <div class="page__section-current-events-excerpt-title">І спогади і мрії
+                  </div>
+                  <div class="page__section-current-events-excerpt-text">
+                    Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="page__section-classic-romanticism" id="classic-romanticism">
+        <div class="page__section-classic-romanticism-bg"></div>
+        <div class="container">
+          <div class="page__section-classic-romanticism-wrapper">
+            <div class="page__section-classic-romanticism-meta">
+              <div class="page__section-classic-romanticism-category">Лекція</div>
+              <div class="page__section-classic-romanticism-date">26/08/2019 - 11:00</div>
+            </div>
+            <h2 class="page__section-classic-romanticism-title">Від класицизму до романтизму</h2>
+          </div>
+        </div>
+      </section>
+      <section class="page__section-gallery" id="gallery">
+        <div class="container">
+          <h2 class="page__section-gallery-title">Галерея</h2>
+        </div>
+        <div class="page__section-gallery-set">
+          <div class="grid page__section-gallery-set-grid">
+            <div class="
+              grid__item
+              grid__item--on320-1-2
+              grid__item--on768-1-3
+              grid__item--on1280-1-4
+            ">
+              <img
+                class="page__section-gallery-set-item"
+                src="images/gallery/gallery-img-01.jpg"
+                alt="Ladies fitting clothes"
+              >
+            </div>
+            <div class="
+              grid__item
+              grid__item--on768-4-6
+              grid__item--on1280-5-12
+            ">
+              <img
+                class="page__section-gallery-set-item"
+                src="images/gallery/gallery-img-02.jpg"
+                alt="Winter in a village"
+              >
+            </div>
+            <div class="
+              grid__item
+              grid__item--on1280-1-8
+              page__section-gallery-set-item--hidden-on320
+            ">
+              <img
+                class="page__section-gallery-set-item"
+                src="images/gallery/gallery-img-03.jpg"
+                alt="Summer in a park"
+              >
+            </div>
+            <div class="
+              grid__item
+              grid__item--on1280-9-12
+              page__section-gallery-set-item--hidden-on320
+              page__section-gallery-set-item--hidden-on768
+            ">
+              <img
+                class="page__section-gallery-set-item"
+                src="images/gallery/gallery-img-04.jpg"
+                alt="People on a seashore"
+              >
+            </div>
+          </div>
+        </div>
+        <div class="page__section-gallery-pagination">
+          <a class="page__section-gallery-pagination-item page__section-gallery-pagination-item--active" href="#"></a>
+          <a class="page__section-gallery-pagination-item" href="#"></a>
+          <a class="page__section-gallery-pagination-item" href="#"></a>
+          <a class="page__section-gallery-pagination-item" href="#"></a>
+        </div>
+      </section>
+      <section class="page__section-subscription" id="subscription">
+        <div class="container">
+          <h2 class="page__section-subscription-title">Підписка</h2>
+          <div class="page__section-subscription-subtitle">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </div>
+          <div class="grid">
+            <div class="
+              grid__item
+              grid__item--on320-1-2
+              grid__item--on768-2-5
+              grid__item--on1280-4-9
+            ">
+              <form class="form" action="#">
+                <input
+                  class="form__field"
+                  name="email"
+                  type="email"
+                  placeholder="E-mail"
+                  required
+                >
+                <button class="form__button"></button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="grid">
+          <div class="
+            grid__item
+            grid__item--on320-1-2
+            grid__item--on768-1-1
+            grid__item--on1280-1-1
+          ">
+            <div class="footer__logo-and-social">
+              <a class="logo footer__logo" href="/">
+                <img
+                  class="logo__img logo__img--footer"
+                  src="images/na-mu-logo.svg"
+                  alt="Museum logo"
+                >
+              </a>
+              <div class="footer__social-icons">
+                <a
+                  class="footer__social-icon footer__social-icon--facebook"
+                  href="https://www.facebook.com/"
+                  target="_blank"
+                ></a>
+                <a
+                  class="footer__social-icon footer__social-icon--instagram"
+                  href="https://www.instagram.com/"
+                  target="_blank"
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="
+            grid__item
+            grid__item--on320-1-1
+            grid__item--on768-2-3
+            grid__item--on1280-3-4
+          ">
+            <div class="footer__schedule">
+              <div class="footer__schedule-title">Графік роботи</div>
+              <div class="footer__schedule-day"><span class="footer__schedule-day-hours">12:00 — 20:00</span> середа</div>
+              <div class="footer__schedule-day"><span class="footer__schedule-day-hours">12:00 — 20:00</span> четвер</div>
+              <div class="footer__schedule-day"><span class="footer__schedule-day-hours">12:00 — 20:00</span> п’ятниця</div>
+              <div class="footer__schedule-day"><span class="footer__schedule-day-hours">11:00 — 19:00</span> субота</div>
+              <div class="footer__schedule-day"><span class="footer__schedule-day-hours">12:00 — 20:00</span> неділя</div>
+              <div class="footer__schedule-note">
+                Вихідні понеділок, вівторок
+                <br>
+                Каса припиняє роботу за 1 годину
+                <br>
+                до закриття музею
+              </div>
+            </div>
+          </div>
+          <div class="
+            grid__item
+            grid__item--on320-2-2
+            grid__item--on768-4-5
+            grid__item--on1280-5-6
+          ">
+            <div class="footer__contacts">
+              <div class="footer__contacts-title">Контакти:</div>
+              <p class="footer__contacts-text">
+                <a
+                  class="footer__contacts-text-item"
+                  href="https://goo.gl/maps/xnmLJ25f6o4zbCXx9"
+                  target="_blank"
+                >
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
+                <a
+                  class="footer__contacts-text-item"
+                  href="tel:+38 (044) 278-13-57"
+                >
+                  тел. +38(044) 278-13-57
+                </a>
+                <a
+                  class="footer__contacts-text-item"
+                  href="tel:+38 (044) 278-74-54"
+                >
+                  факс +38(044) 278-74-54
+                </a>
+                <a
+                  class="footer__contacts-text-item"
+                  href="mailto:info@namu.kiev.ua"
+                >
+                  e-mail: info@namu.kiev.ua
+                </a>
+              </p>
+            </div>
+          </div>
+          <div class="
+            grid__item
+            grid__item--on320-1-2
+            grid__item--on768-2-5
+            grid__item--on1280-7-7
+          ">
+            <div class="footer__back-and-divider">
+              <a class="footer__back-to-top" href="#"></a>
+              <div class="footer__divider"></div>
+            </div>
+          </div>
+          <div class="
+            grid__item
+            grid__item--on320-1
+            grid__item--on768-2-3
+            grid__item--on1280-8-9
+          ">
+            <a class="footer__menu-item" href="#gallery">Галерея</a>
+            <a class="footer__menu-item" href="#events">Виставки та події</a>
+          </div>
+          <div class="
+            grid__item
+            grid__item--on320-2-2
+            grid__item--on768-4-5
+            grid__item--on1280-10-11
+          ">
+            <a class="footer__menu-item" href="#subscription">Про Нас</a>
+            <a class="footer__menu-item" href="#">Контакти</a>
+          </div>
+        </div>
+        <div class="footer__design-and-copyright">
+          <div class="footer__design-and-copyright-item">
+            Designed by Zhyriada Marina
+          </div>
+          <div class="footer__design-and-copyright-item">
+            Copyright © 2019. All Rights Reserved.
+          </div>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
