--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
             grid__item--on1280-6-7
             header__logo-wrapper
           ">
-            <a class="logo header__logo" href="/">
+            <a class="logo header__logo" href="#">
               <img
                 class="logo__img logo__img--header"
                 src="images/na-mu-logo.svg"
@@ -252,7 +252,7 @@
             grid__item--on1280-1-1
           ">
             <div class="footer__logo-and-social">
-              <a class="logo footer__logo" href="/">
+              <a class="logo footer__logo" href="#">
                 <img
                   class="logo__img logo__img--footer"
                   src="images/na-mu-logo.svg"
