--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,194 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+      rel="shortcut icon"
+      href="../src/images/favicon.jpg"
+      type="image/x-icon"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page">
+    <div class="header">
+      <a href="#header__nav" class="header__menu"></a>
+      <a href="#" class="header__logo"></a>
+      <div class="header__nav" id="header__nav">
+        <a href="#museum-of-art" class="header__link">Художній музей</a>
+        <a href="#current-events" class="header__link">Актуальні події</a>
+        <a href="#gallary" class="header__link">Галерея</a>
+        <a href="#subscription" class="header__link">Підписка</a>
+        <a href="#footer" class="header__link">Інфо</a>
+      </div>
+    </div>
+
+    <div class="museum-of-art container" id="museum-of-art">
+      <div class="grid">
+        <div class="grid__itemT--1-3 grid__itemD--1-5 museum-of-art__order">
+          <div class="museum-of-art__content">
+            <h1 class="museum-of-art__h1">ХУДОЖНІЙ <br> МУЗЕЙ</h1>
+            <div class="museum-of-art__container2">
+              <a href="#current-events" class="museum-of-art__events">ПОДІЇ</a>
+              <div class="museum-of-art__tickets">
+                <div class="museum-of-art__tickets--text">КВИТКИ</div>
+                <a href="#current-events" class="museum-of-art__tickets--arrow"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="grid__itemT--4-6 grid__itemD--6-12">
+          <div class="museum-of-art__picture"></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="current-events"  id="current-events">
+      <h2 class="current-events__title container">Актуальні події</h2>
+      <div class="current-events__exibition container grid">
+        <div class="grid__itemT--1-6 grid__itemD--1-7 current-events__margin-bottom">
+          <div class="current-events__picture current-events__picture--1"></div>
+        </div>
+        <div class="grid__itemT--1-6 grid__itemD--9-12 current-events__margin">
+          <div class="current-events__line">
+            <div class="current-events__name">ВИСТАВКА</div>
+            <div class="current-events__date">26.08-29.11.2019</div>
+          </div>
+          <h3 class="current-events__h3-cube">Йду і повертаюсь</h3>
+          <div class="current-events__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</div>
+        </div>
+      </div>
+      <div class="current-events__exibition container grid">
+        <div class="grid__itemT--1-6 grid__itemD--1-7 current-events__margin-bottom">
+          <div class="current-events__picture current-events__picture--2"></div>
+        </div>
+        <div class="grid__itemT--1-6 grid__itemD--9-12 current-events__margin">
+          <div class="current-events__line">
+            <div class="current-events__name">ВИСТАВКА</div>
+            <div class="current-events__date">26.08-29.11.2019</div>
+          </div>
+          <h3 class="current-events__h3-cube">І спогади і мрії</h3>
+          <div class="current-events__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</div>
+        </div>
+      </div>
+      <div class="current-events__lecture">
+        <div class="current-events__picture current-events__picture--3"></div>
+        <div class="current-events__lecture-translate">
+          <div class="current-events__line current-events__line-lecture">
+            <div class="current-events__name current-events__name-lecture">ЛЕКЦІЯ</div>
+            <div class="current-events__date">26.08-29.11.2019</div>
+          </div>
+          <h3 class="current-events__h3">Від класицизму до романтизму</h3>
+        </div>
+      </div>
+    </div>
+
+    <div class="gallary" id="gallary">
+      <h2 class="gallary__title container">Галерея</h2>
+      <div class="grid grid__gallary">
+        <div class="grid__gallary--item grid__gallary--item-1 grid__itemD--1-4" id="picture-1">
+          <div class="gallary__picture gallary__picture-1"></div>
+        </div>
+        <div class="grid__gallary--item grid__gallary--item-2 grid__itemD--5-12" id="picture-2">
+          <div class="gallary__picture gallary__picture-2"></div>
+        </div>
+        <div class="grid__gallary--item grid__gallary--item-3 grid__itemD--1-8" id="picture-3">
+          <div class="gallary__picture gallary__picture-3"></div>
+        </div>
+        <div class="grid__gallary--item grid__gallary--item-4 grid__itemD--9-12" id="picture-4">
+          <div class="gallary__picture gallary__picture-4"></div>
+        </div>
+      </div>
+      <div class="gallary__slider">
+        <a href="#picture-1" class="gallary__swich gallary__swich-1"></a>
+        <a href="#picture-2" class="gallary__swich gallary__swich-2"></a>
+        <a href="#picture-3" class="gallary__swich gallary__swich-3"></a>
+        <a href="#picture-4" class="gallary__swich gallary__swich-4"></a>
+      </div>
+    </div>
+
+    <div class="subscription" id="subscription">
+      <div class="subscription__container">
+        <h2 class="subscription__title">Підписка</h2>
+        <div class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</div>
+        <form action="#" class="subscription__form">
+          <input
+            class="subscription__email"
+            type="email"
+            id="email"
+            name="email"
+            placeholder="Email"
+            required
+          >
+          <button class="subscription__button"></button>
+        </form>
+      </div>
+    </div>
+
+    <div class="footer container" id="footer">
+      <div class="footer-grid grid">
+        <div class="footer-grid__item--1-2 grid__itemT--1-1 grid__itemD--1-2">
+          <div class="footer__links">
+            <a href="#" class="footer__logo"></a>
+            <div class="footer__socials">
+              <a
+                href="https://www.facebook.com/Museum/"
+                class="footer__social footer__social-facebook"
+                target="_blank"
+              ></a>
+              <a
+                href="https://www.instagram.com/Museum/"
+                class="footer__social footer__social-instagram"
+                target="_blank"
+              ></a>
+            </div>
+          </div>
+        </div>
+        <div class="footer-grid__item--1 grid__itemT--2-3 grid__itemD--3-4">
+          <div class="footer__subtitle">Графік роботи</div>
+          <div class="footer__text">
+            <div class="footer__text-600">12:00 — 20:00</div> середа<br>
+            <div class="footer__text-600">12:00 — 20:00</div> четвер<br>
+            <div class="footer__text-600">12:00 — 20:00</div> п’ятниця<br>
+            <div class="footer__text-600">11:00 — 19:00 </div> субота<br>
+            <div class="footer__text-600">11:00 — 19:00 </div> неділя<br><br>
+
+            <div class="footer__text-600">Вихідні:</div> понеділок, вівторок
+            Каса припиняє роботу за 1 годину до закриття музею
+          </div>
+        </div>
+        <div class="footer-grid__item--2 grid__itemT--4-5 grid__itemD--5-6">
+          <div class="footer__subtitle">Контакти:</div>
+          <div class="footer__text">
+            вул. М. Грушевського, 6; Київ, 01001 <br>
+            тел. +38 (044) 278-13-57 <br>
+            факс +38 (044) 278-74-54 <br>
+            e-mail: info@namu.kiev.ua
+          </div>
+          <div class="footer__up">
+            <a href="#" class="footer__up-up"></a>
+          </div>
+        </div>
+        <div class="footer-grid__item--1-2 grid__itemT--2-5 grid__itemD--7-7">
+          <div class="footer__line"></div>
+        </div>
+        <div class="footer-grid__item--1 grid__itemT--2-3 grid__itemD--8-9">
+          <a href="#gallary" class="footer__link">Галерея</a>
+          <a href="#current-events" class="footer__link">Виставки та події</a>
+        </div>
+        <div class="footer-grid__item--2 grid__itemT--4-5 grid__itemD--10-11">
+          <a href="#subscription" class="footer__link">Про Нас</a>
+          <a href="#footer" class="footer__link">Контакти</a>
+        </div>
+      </div>
+      <div class="footer__bottom">
+        <div class="footer__bottom-text">Designed by Zhyriada Marina</div>
+        <div class="footer__bottom-text">Copyright © 2019. All Rights Reserved.</div>
+      </div>
+    </div>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
