--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,59 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;700&family=Roboto&display=swap"
+      rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+
+      <div class="header__title-block">
+        <a href="#" class="header__menu header__menu--tablet">
+          <img src="images/Vector.png" alt="menu">
+        </a>
+        <h1 class="header__title">
+          ХУДОЖНІЙ
+          <br>
+          МУЗЕЙ
+        </h1>
+
+        <div class="input">
+          <a href="#" class="input__ticket">
+            КВИТКИ
+          </a>
+          <a href="#" class="input__arrow">
+            <img src="images/green-block.png" class="input__img" alt="img">
+          </a>
+        </div>
+        <p class="header__supplement">
+
+        </p>
+      </div>
+
+      <div class="header__picture">
+        <a href="#" class="header__menu">
+          <img src="images/Vector.png" alt="menu">
+        </a>
+        <a href="#" class="logo">
+          <img src="images/NA MU.png" class="logo__img" alt="logo">
+        </a>
+      </div>
+    </header>
+
+    <main>
+      <section class="section-galery">
+        <div class="container">
+
+        </div>
+      </section>
+
+    </main>
+
+
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
