improved code style

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
     rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
+  <body class="page__body">
     <header class="header">
 
       <div class="header__title-block">
@@ -39,7 +39,7 @@
         <a href="#" class="header__menu">
           <img src="images/Vector.png" alt="menu">
         </a>
-        <a href="#" class="logo">
+        <a href="/" class="logo">
           <img src="images/NA MU.png" class="logo__img" alt="logo">
         </a>
       </div>
