--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>ХУДОЖНІЙ МУЗЕЙ</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?    family=Montserrat:wght@400;700&display=swap"     rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="container">
+        <section class="header__top">
+          <a href="#menu" class="header__icon"></a>
+          <a href="#" class="header__logo">
+            <img
+              src="./images/NA MU.svg"
+              alt="ХУДОЖНІЙ МУЗЕЙ"
+              class="logo__item"
+            >
+          </a>
+        </section>
+        <section class="header__content">
+          <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <a
+            href="/" class="header__tickets-button">КВИТКИ</a>
+        </section>
+      </div>
+    </header>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
