Create header without burger menu

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU. National Art Museum of Ukraine</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <div class="header page__header">
+      <div class="container">
+        <div class="header__content">
+          <div class="header__top">
+            <a href="#" class="header__menu-icon"></a>
+            <div class="grid">
+              <a href="#" class="header__logo">
+                <img
+                  src="./images/NAMU.svg"
+                  alt="NAMU logo"
+                  class="header__logo-pic"
+                >
+              </a>
+            </div>
+          </div>
+
+          <div class="header__name">
+            <a href="#" class="header__menu-icon header__menu-icon--tablet"></a>
+            <h1 class="header__title">художній музей</h1>
+            <div class="header__button">
+              <a href="#" class="header__button-buy">Квитки</a>
+              <a href="#" class="header__button-click"> > </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
