--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       <div class="container">
         <section class="header__top">
           <a href="#menu" class="header__icon"></a>
-          <a href="#" class="header__logo">
+          <a href="#" class="header__logo logo">
             <img
               src="./images/NA MU.svg"
               alt="ХУДОЖНІЙ МУЗЕЙ"
@@ -26,12 +26,40 @@
           </a>
         </section>
         <section class="header__content">
-          <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <h1 class="header__title">ХУДОЖНІЙ<br>МУЗЕЙ</h1>
           <a
-            href="/" class="header__tickets-button">КВИТКИ</a>
+            href="/" class="header__tickets-button button">КВИТКИ</a>
         </section>
       </div>
     </header>
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <section class="menu__top">
+          <a href="#" class="menu__icon-cross"></a>
+          <a href="#" class="menu__logo logo">
+            <img
+              src="./images/NA MU.svg"
+              alt="ХУДОЖНІЙ МУЗЕЙ"
+              class="logo__item"
+            >
+          </a>
+        </section>
+        <ul class="menu__list">
+          <li class="menu__item">
+            <a href=" " class="menu__link">Про нас</a>
+          </li>
+          <li class="menu__item">
+            <a href=" " class="menu__link">Виставки та події</a>
+          </li>
+          <li class="menu__item">
+            <a href=" " class="menu__link">Галерея</a>
+          </li>
+          <li class="menu__item">
+            <a href=" " class="menu__link">Контакти</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
