added 2 sections(still a lot of work)

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,15 +20,15 @@
         художній <br> музей
       </h1>
 
-      <div class="header__form">
-        <div class="header__form-description">
+      <div class="header__form form form--header">
+        <div class="header__form-description form__description">
           квитки
         </div>
         <div class="header__form-button button"></div>
       </div>
     </header>
     <main class="content">
-      <section class="events">
+      <section class="page__events events">
         <h1 class="events__title">Актуальні події</h1>
         <div class="events__content event">
           <img
@@ -92,7 +92,7 @@
         </div>
       </section>
 
-      <section class="gallery">
+      <section class="page__gallery gallery">
         <h1 class="gallery__title">
           Галерея
         </h1>
@@ -124,10 +124,82 @@
           >
         </div>
         <div class="gallery__selector">
-          <img src="./images/ellipse-active.png" alt="">
-          <img src="./images/ellipse.png" alt="">
-          <img src="./images/ellipse.png" alt="">
-          <img src="./images/ellipse.png" alt="">
+          <img src="./images/ellipse-active.png" alt="1">
+          <img src="./images/ellipse.png" alt="0">
+          <img src="./images/ellipse.png" alt="0">
+          <img src="./images/ellipse.png" alt="0">
+        </div>
+      </section>
+
+      <section class="page__subscription subscription">
+        <h2 class="subscription__title">
+          Підписка
+        </h2>
+        <p class="subscription__description">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+        <form action="#" method="get" class="subscription__form form form--sub">
+          <input type="text" class="form-input" placeholder="E-mail">
+        <div class="subscription__form-button button button--red"></div>
+        </form>
+      </section>
+
+      <section class="info">
+        <div class="info__emblems">
+          <h1 class="info__title">
+            na <br> mu
+          </h1>
+          <div class="info__emblems-logos">
+            <img
+              src="./images/Facebook.png"
+              alt="facebook"
+              class="info__logos-image info__logos-image--fb"
+            >
+            <img
+              src="./images/Insta.png"
+              alt="instagram"
+              class="info__logos-image"
+            >
+          </div>
+        </div>
+        <div class="info__description">
+          <div class="info__description-schedule">
+            <div class="info__description-title">
+              Графік роботи
+            </div>
+            <div class="info__description-schedule-time">
+              <span class="bold">12:00 — 20:00</span>  середа
+              <span class="bold">12:00 — 20:00</span>  четвер
+              <span class="bold">12:00 — 20:00</span>  п’ятниця
+              <span class="bold">11:00 — 19:00</span>  субота
+              <span class="bold">11:00 — 19:00</span>  неділя
+              <br> <br>
+              Вихідні понеділок, вівторок
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </div>
+          </div>
+          <div class="info__description-contacts">
+            <div class="info__description-title">
+              Контакти
+            </div>
+            <div class="info__description-contacts-names">
+              вул. М. Грушевського, 6; Київ, 01001
+              тел. +38 (044) 278-13-57
+              факс +38 (044) 278-74-54
+              e-mail: info@namu.kiev.ua
+            </div>
+          </div>
+        </div>
+        <div class="info__items">
+          <a class="info__items-link">Галерея</a>
+          <a class="info__items-link">Про нас</a>
+          <a class="info__items-link">Виставки і події</a>
+          <a class="info__items-link">Контакти</a>
+        </div>
+        <div class="info__copyright">
+          <p>Designed by Zhyriada Marina</p>
+          <p>Copyright © 2019. All Rights Reserved.</p>
         </div>
       </section>
     </main>
