--- a/src/index.html
+++ b/src/index.html
@@ -87,9 +87,9 @@
                 26.08-29.11.2019
               </span>
             </div>
-            <h2 class="current-events__title">
+            <h3 class="current-events__title">
               Йду i повертаюсь
-            </h2>
+            </h3>
             <p class="current-events__describe">
               Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
             </p>
@@ -117,14 +117,37 @@
                 26.08-29.11.2019
               </span>
             </div>
-            <h2 class="current-events__title">
+            <h3 class="current-events__title">
               I спогади i мрії
-            </h2>
+            </h3>
             <p class="current-events__describe">
               Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади i мрії».
             </p>
           </div>
 
+        </section>
+        <section class="main__about-us about-us">
+          <img
+            src="../src/images/Rectangle 20.jpg"
+            alt="Від класицизму до романтизму"
+            class="about-us__foto">
+          <div class="container">
+            <div class="about-us__content">
+              <div class="about-us__exhibition">
+                <a
+                  href="."
+                  class="about-us__exhibition-link"
+                  target="_blank"
+                >
+                  ВИСТАВКА
+                </a>
+                <span class="about-us__exhibition-date">
+                  26/08/2019 - 11:00
+                </span>
+              </div>
+              <h3 class="about-us__title">Від класицизму до романтизму</h3>
+            </div>
+          </div>
         </section>
 
       </div>
