--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,101 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__image">
+        <a href="#menu" class="header__menu">
+        </a>
+        <a href="#" class="logo">
+          <img
+            class="logo__image"
+            src="images/NA MUlogo.png"
+            alt="logo"
+          >
+        </a>
+      </div>
+      <div class="header__content">
+        <h1 class="header__title">
+          ХУДОЖНІЙ МУЗЕЙ
+        </h1>
+
+        <div class="header__button button">
+          <div class="button__text">
+            КВИТКИ
+          </div>
+          <a href="#" class="button__field">
+            <img
+              src="images/arrow_right.png"
+              alt="green buttom"
+              class="button__action"
+            >
+          </a>
+        </div>
+      </div>
+    </header>
+
+    <nav class="menu page__menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top">
+            <a href="#" class="icon header__cross">
+            </a>
+            <a href="#" class="logo logo__menu">
+              <img src="images/NA MUlogo.png" alt="logo">
+            </a>
+          </div>
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#" class="menu__link">
+                Актуальні події
+              </a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">
+                Галерея
+              </a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">
+                Підписка
+              </a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">
+                Контакти
+              </a>
+            </li>
+          </ul>
+          <a href="tel:+38 (044) 278-13-57" class="menu__contacts">
+              +38 (044) 278-13-57
+          </a>
+          <a
+            target="_blank"
+            href="https://goo.gl/maps/LTDT6eAoZaSezF8a6"
+            class="menu__contacts"
+          >
+              вул. М. Грушевського, 6; Київ
+          </a>
+        </div>
+      </div>
+    </nav>
+
+    <main>
+
+    </main>
+
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
