added photos, styles and footer

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
           <a href="#events" class="input__ticket">
             КВИТКИ
           </a>
-          <a href="#" class="input__arrow">
+          <a href="#events" class="input__arrow">
             <img
               src="images/green-block.png"
               class="input__img"
@@ -93,10 +93,10 @@
               <a href="#galery" class="menu__link">Галерея</a>
             </li>
             <li class="menu__item">
-              <a href="#" class="menu__link">Підписка</a>
+              <a href="#sign-up" class="menu__link">Підписка</a>
             </li>
             <li class="menu__item">
-              <a href="#" class="menu__link">Контакти</a>
+              <a href="#contacts" class="menu__link">Контакти</a>
             </li>
           </ul>
 
@@ -228,7 +228,7 @@
 
               <div class="slider__slide first">
                 <img
-                  src="images/Rectangle 13.5.png"
+                  src="images/Rectangle13.png"
                   alt="photo"
                   class="slider__img"
                 >
@@ -273,7 +273,7 @@
 
               <div class="galery__first-picture">
                 <img
-                  src="images/Rectangle 13.5.png"
+                  src="images/Rectangle13.png"
                   alt="photo"
                   class="galery__img"
                 >
@@ -310,9 +310,147 @@
       </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="sign-up" id="sign-up">
+        <h3 class="sign-up__title">Підписка</h3>
+        <p class="sign-up__subtitle">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
 
+        <div class="sign-up__input">
+          <form action="#" class="sign-up__form">
+            <label for="email">
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="E-mail"
+                required
+                class="sign-up__email"
+              >
+            </label>
 
+            <button type="submit"  class="sign-up__lable">
+              <img
+              src="images/right-arrow.png"
+              class="sign-up__arrow-img"
+              alt="img">
+            </button>
+          </form>
+        </div>
+
+      </div>
+      <div class="container">
+        <div class="footer">
+          <div class="footer__social">
+            <a
+              href="https://goo.gl/maps/Q3KLWrF6TX255TT39"
+              class="footer__logo"
+              target="_blank"
+              >
+              <img src="images/NA MU.png" alt="logo">
+            </a>
+            <div class="footer__logos">
+              <a
+                href="https://www.facebook.com/namu.museum/"
+                class="footer__facebook"
+                target="_blank"
+              >
+                <img
+                  src="images/facebook-app-symbol.png"
+                  alt="facebook"
+                  class="footer__facebook-img"
+                >
+              </a>
+              <a href="https://www.instagram.com/namu.museum/"
+              class="footer__instagran"
+              target="_blank"
+              >
+                <img
+                  src="images/instagram.png"
+                  alt="instagran"
+                  class="footer__instagran-img">
+              </a>
+            </div>
+
+          </div>
+          <div class="footer__schedule">
+            <p>Графік роботи</p>
+            <p>
+              <span class="footer__time-bold">12:00 — 20:00</span>
+              середа
+            </p>
+            <p>
+              <span class="footer__time-bold">12:00 — 20:00</span>
+              четвер
+            </p>
+            <p>
+              <span class="footer__time-bold">12:00 — 20:00</span>
+              п’ятниця
+            </p>
+            <p>
+              <span class="footer__time-bold">11:00 — 19:00</span>
+              субота
+            </p>
+            <p>
+              <span class="footer__time-bold">11:00 — 19:00</span>
+              неділя
+            </p>
+          </div>
+
+          <p class="footer__additional-information">
+            Вихідні понеділок, вівторок. Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+          <div class="footer__contacts" id="contacts">
+            <p>
+              <a href="tel:+38 (044) 278-13-57" class="link">
+                Контакти:
+              </a>
+            </p>
+            <p>
+              вул. М. Грушевського, 6; Київ, 01001 тел:
+              <a href="tel:+38 (044) 278-13-57" class="link">
+               +38 (044) 278-13-57
+              </a>
+              факс:
+              <a href="tel:+38 (044) 278-74-54" class="link">
+                +38 (044) 278-74-54
+              </a>
+              e-mail: info@namu.kiev.ua
+            </p>
+          </div>
+          <a href="#" class="footer__up-btn">
+            <img
+              src="images/thin-up-arrow.png"
+              alt="icon"
+              class="footer__up-btn-img"
+            >
+          </a>
+          <div class="footer__line"></div>
+          <div class="footer__links-1">
+            <a href="#galery" class="footer__galery link">
+              Галерея
+            </a>
+            <a href="#events" class="footer__events link">
+              Виставки та події
+            </a>
+          </div>
+          <div class="footer__links-2">
+            <a href="#sign-up" class="footer__about-us link">
+              Про Нас
+            </a>
+            <a class="footer__contacts-link link">
+              Контакти
+            </a>
+          </div>
+
+          <div class="designer">
+            <p>Designed by Zhyriada Marina</p>
+            <p>Copyright © 2019. All Rights Reserved.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
 
     <script type="text/javascript" src="scripts/main.js"></script>
